# Tantalum

./: .gitignore  LICENSE  README.md  SECURITY.md  install.sh  install_dev.sh  pyproject.toml  setup.py
backend/: build.zig  build.zig.zon
backend/src/: main.zig
frontend/: __main__.py  cli.py  commands.toml
